--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <script src="https://d3js.org/d3.v4.js"></script>
   <script src="https://unpkg.com/vue/dist/vue.js"></script>
   <script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
-  <script src="../distributions.js"></script>
-  <script src="../model.js"></script>
-  <script src="../charts.js"></script>
+  <script src="distributions.js"></script>
+  <script src="model.js"></script>
+  <script src="charts.js"></script>
 </head>
 <body>
   <div id="app" v-cloak>
