hide x scrollbar we don't want that

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <style>
     .input-group__selections {
       overflow: scroll;
+      overflow-x: hidden;
       max-height: 100px;
     } 
     [v-cloak] {
