--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Income Distributions</title>
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
   <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet" type="text/css"></link>
-  <link href="styles.css" rel="stylesheet" type="text/css">
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
   <style>
     .input-group__selections {
@@ -62,11 +61,11 @@
                   </v-select>
                 </v-flex>
                 <v-flex xs6 sm6>
-                  <v-btn primary light @click.native="selectAll">Select all</v-btn>
-                  <v-btn primary light @click.native="selectNone">Clear all</v-btn>                  
+                  <v-btn primary dark @click.native="selectAll">Select all</v-btn>
+                  <v-btn primary dark @click.native="selectNone">Clear all</v-btn>                  
                 </v-flex>
                 <v-flex xs6 sm6 class="text-xs-right">
-                  <v-btn primary light @click.native="sortByPopulation">Sort by population</v-btn>
+                  <v-btn primary dark @click.native="sortByPopulation">Sort by population</v-btn>
                   <v-btn dark disabled>Sort by region</v-btn>                  
                 </v-flex>
               </v-layout>
@@ -78,7 +77,7 @@
                 <v-slider v-model="year" thumb-label v-bind:min="series.minYear()" v-bind:max="series.maxYear()" step="1" v-bind:label="'Year '+year" @keyup.left="decrementYear" @keyup.right="incrementYear"></v-slider>
               </v-flex>
               <v-flex xs7>
-                <v-tabs grow centered light v-model="currentTab">
+                <v-tabs grow centered dark v-model="currentTab">
                   <v-tabs-bar slot="activators">
                     <v-tabs-slider></v-tabs-slider>
                     <v-tabs-item href="#tab-pdf" ripple>PDF</v-tabs-item>
