redirect to live server

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </main>
       
       <v-footer>
-        <span>A research project by the World Bank Development Data Group. <strong>Results are experimental only and should not be considered official.</strong></span>
+        <span><strong>Results are experimental only and should not be considered official.</strong></span>
       </v-footer>
     </v-app>
   </div>
