--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Income Distributions</title>
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
-  <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet" type="text/css"></link>
+  <link href="https://unpkg.com/vuetify@0.12.7/dist/vuetify.min.css" rel="stylesheet" type="text/css"></link>
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
   <style>
     .input-group__selections {
@@ -19,8 +19,8 @@
     }
   </style>
   <script src="https://d3js.org/d3.v4.js"></script>
-  <script src="https://unpkg.com/vue/dist/vue.js"></script>
-  <script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
+  <script src="https://unpkg.com/vue@2.3.4/dist/vue.js"></script>
+  <script src="https://unpkg.com/vuetify@0.12.7/dist/vuetify.js"></script>
   <script src="distributions.js"></script>
   <script src="model.js"></script>
   <script src="charts.js"></script>
